Current versions are shown in the script updates notification email.
Errors when extracting cPanel, Plesk and Ensim backup files are reported in more detail.
Sub-domains in cPanel backups can now be properly imported.
Virtualin plugins can now export script installers, using the scripts_list function in virtual_feature.pl.
Added the --user command-line option to backup-domain.pl to backup all domains owned by some Virtualmin user.
Added a checkbox to the backup form to include sub-servers of those selected too. A similar option is also available to virtual server owners when backing up a single domain, to include all sub-servers with the same owner.
Added the --user option to disable-feature.pl and enable-feature.pl to turn features off and on in all domains owned by some user, and the list-domains.pl to fnd domains by user.
Both the maximum and minimum versions for scripts can now be selected on the global Script Installers page.
Added the --user and --all-domains parameters to list-scripts.pl, list-users.pl, list-aliases.pl and list-simple-aliases.pl, to list objects in multiple domains.
---- Changes since 3.49 ----
When used, the ClamAV server clamd can be stopped and started from the system information page, just like MySQL and Apache.
Added the original website URLs for all script installers, displayed on the installation form and on the page showing details of an installed script.
Updated the phpMyAdmin script installer to 2.11.2.2, and Instiki 0.12.0.
The initial administration login and password is displayed after installing a script.
Advanced autoreply options are hidden by default, to make the alias form less confusing.
When re-sending the signup email for a server, the owner's email address can be entered.
When there are too many servers on the List Virtual Servers page to show in a table, buttons to update and delete them all are displayed along with the seach form.