@@ -12,7 +12,7 @@
 
  x Add to website
 
- - Add the freshmeat.net
+ x Add the freshmeat.net
 
  - Announce on mailing list
 
