@@ -1,0 +1,9 @@
+<header>Force group name to be always same as username?</header>
+
+When this is set to <b>Yes</b>, Virtualmin will always make the Unix group name
+for new domains the same as the username by default, unless it is already in
+user. When <b>No</b> is chosen, the group name is taken from the first part
+of the domain name or full domain instead. <p>
+
+<footer>
+
